# reqres-api-tests

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
framework/: demoqa_with_env.py
schemas/: user.py
tests/: conftest.py  test_demowebshop.py  test_reqres.py
